e2e/basic-cluster/config/kubeconfig.yaml
apiVersion: v1
clusters:
- cluster:
    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lJWDJwM3l6VjhLZnN3RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TmpBek1EVXlNRE00TURKYUZ3MHpOakF6TURJeU1EUXpNREphTUJVeApFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLCkFvSUJBUUMxZ1FqS2ExUVpMYXowTjV3MUVjeUtMR2g3Ty9IZnhhNC8rdm44cktxNmJYQzgreFl2VVRyZDdDVGIKcUQ5QUg1bTVVYXR2ZU8xUGpROFc4TlpjWkxzQ0pWMTF6eDAyZVJIYWRzQWNSTEJQZjQ0YlBEYzRaK2xnTFJS [...]
    server: https://127.0.0.1:52229
  name: kind-kind-dev
contexts:
- context:
    cluster: kind-kind-dev
    user: kind-kind-dev
  name: kind-kind-dev
current-context: kind-kind-dev
kind: Config
users:
- name: kind-kind-dev
  user:
    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lJWkllcWt0bmxvUW93RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TmpBek1EVXlNRE00TURKYUZ3MHlOekF6TURVeU1EUXpNREphTUR3eApIekFkQmdOVkJBb1RGbXQxWW1WaFpHMDZZMngxYzNSbGNpMWhaRzFwYm5NeEdUQVhCZ05WQkFNVEVHdDFZbVZ5CmJtVjBaWE10WVdSdGFXNHdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDbmpXZWQKV2NxWHhnUlphRnpwMTBaOGdJK1oyVXVuQlEvTis3NlljMUhIRHZMVmdRM3ZBSkV1RWx2bmJaYUpkOVVuM3YzcQp [...]
    client-key-data: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBcDQxbm5WbktsOFlFV1doYzZkZEdmSUNQbWRsTHB3VVB6ZnUrbUhOUnh3N3kxWUVOCjd3Q1JMaEpiNTIyV2lYZlZKOTc5NnM2cHpqRzJYaU1ZZEx2MWRCV0lBZzNIb1lDRWc1UE9hR2dVbjZHQVY0YXEKdWZ6bjFidC9jNUQxTkU2bWdvSC9sUU5JSUYzZUFVZEo4SEVyMTg1R2J3a0pGUU1Ta3ppR1FjejE3emE0SVhObgpmWTNqYVZqUzdkdENNNDBnZ1FiOThvUXpMcEcyRWN4TUJZK1NzVFNoY2VIRnplSFc5YmZqUit1QmN5RXNmRU1rCkgzTkw5ck1pZ3hEZXNVOHlSN3RGODNBOUtoT3FVU0JTc2V5ZmRMZXJzVGRxNDBIVEhYY0prV09PM3B4V0NzMUwKUGt [...]
