e2e/basic-cluster/config/s-ingress-tls.yaml
apiVersion: v1
kind: Secret
metadata:
  name: s-ingress-tls
  namespace: s-ingress
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFTTVJBd0RnWURWUVFEREFkVVpYTjAKSUVOQk1CNFhEVEkyTURNd016RXlNVGt4TTFvWERUTTJNREl5T1RFeU1Ua3hNMW93RmpFVU1CSUdBMVVFQXd3TApaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFBFKzFrClRrandMblBTelZlQlBwZ0NWaGZQRCtyODlydXZRUVFZV0VEQ2pOaGlzTDhDTVRXbDcxQXV5RDlRZnlDTXRTeUsKSUhVV01BZkFvMVppaXpucTdaRVF2QnhsQTNLTGtRM29TUVFLcmVPaTcvc0M1cHBETE5WTUZjK1pzWjBpNG1LcwpNZ3R0dm1IVjRxRm1Tb [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRFBFKzFrVGtqd0xuUFMKelZlQlBwZ0NWaGZQRCtyODlydXZRUVFZV0VEQ2pOaGlzTDhDTVRXbDcxQXV5RDlRZnlDTXRTeUtJSFVXTUFmQQpvMVppaXpucTdaRVF2QnhsQTNLTGtRM29TUVFLcmVPaTcvc0M1cHBETE5WTUZjK1pzWjBpNG1Lc01ndHR2bUhWCjRxRm1TblQ0UXFSYWtXUWxwaFM1SGdPNlNzWkM2NTc3ZkZ1RzJsTDAyaGROV20xTDVmRWlJT3k1TWpQSEtDenIKbnl3YVhlbEhBMi8wTmpZRVo2NWJKZFBXR2RvNU9rOW1yVlhybzM5OVZFbEtwb0ErZHFOaDBHaHJLSS9hY2FIVAoycTNFRDVQdVowQjNvd [...]
