e2e/basic-cluster/config/secrets.yaml
apiVersion: v1
kind: Secret
metadata:
  name: test-tls
  namespace: default
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN6ekNDQWJlZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREFTTVJBd0RnWURWUVFEREFkVVpYTjAKSUVOQk1CNFhEVEkyTURNd05URTROVFUwT0ZvWERUTTJNRE13TWpFNE5UVTBPRm93RXpFUk1BOEdBMVVFQXd3SQpkR1Z6ZEM1amIyMHdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDY2lxdms0dTl6ClJ2b254dUV5RzdtcnNQRXVuTXgzallUQkRjOXZPekpqa0V0MU5yQi82T2I2MXNkYTZ6V1dualNpQ1JFelpGTXYKZVRtQXJUb1RRcmFkdXVualRBVGU1MFh1elN2U0pQMjZGNU4vNUV6NGhKRWFQQU9qNHhRUTFHQ3V2b0VpT1R3Ngo5ZFl6a3gvNFRMNHhnY [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ2NpcXZrNHU5elJ2b24KeHVFeUc3bXJzUEV1bk14M2pZVEJEYzl2T3pKamtFdDFOckIvNk9iNjFzZGE2eldXbmpTaUNSRXpaRk12ZVRtQQpyVG9UUXJhZHV1bmpUQVRlNTBYdXpTdlNKUDI2RjVOLzVFejRoSkVhUEFPajR4UVExR0N1dm9FaU9UdzY5ZFl6Cmt4LzRUTDR4Z2NTcXBhVSszaHNYSHVYQnNuNjFPNWZnb0xPdnVlNlJraFNNNHV4d0FFTlBwWG5qWDlSNU9PYk4Ka1c1d3JpZ2JGdk5xdnFZOC9iRkd2QW16U0kwbTNoMlZSWWV0RDYva1ZPN2s2c2xsYXlhUllRSnY5eWdrL1JjRwpuYTZOdVpwRUN3RUNyZ [...]
