e2e/basic-cluster/config/test_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: s-ingress
  rules:
    - host: "test.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: example-service
                port:
                  number: 8080
  tls:
    - hosts:
        - test.com
      secretName: "test-tls"
